--- a/index.html
+++ b/index.html
@@ -43,5 +43,28 @@
         </div>
       </div>
     </div>
+    <div class="news">
+      <div class="news_title">
+        <h3>Latest Heat News & Rumors</h3>
+      </div>
+      <div class="reports">
+        <div class="item">
+          <img src="" alt="" />
+          <div class="caption"></div>
+        </div>
+        <div class="item">
+          <img src="" alt="" />
+          <div class="caption"></div>
+        </div>
+        <div class="item">
+          <img src="" alt="" />
+          <div class="caption"></div>
+        </div>
+        <div class="item">
+          <img src="" alt="" />
+          <div class="caption"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
