--- a/index.html
+++ b/index.html
@@ -92,5 +92,17 @@
         </div>
       </div>
     </div>
+    <div class="quote">
+      <div class="quote_text_&_author">
+        <div class="quote_text">
+          When nothing seems to help, I go and look at a stonecutter hammering
+          away at his rock, perhaps a hundred times without as much as a crack
+          showing in it. Yet at the hundred and first blow it will split in two,
+          and I know it was not that last blow that did it, but all that had
+          gone before.
+        </div>
+        <div class="author">- Dhairya Thakkar (not really lol)</div>
+      </div>
+    </div>
   </body>
 </html>
