apply css styling to quote section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
     </div>
     <div class="quote">
-      <div class="quote_text_&_author">
+      <div class="quote_text_author">
         <div class="quote_text">
           When nothing seems to help, I go and look at a stonecutter hammering
           away at his rock, perhaps a hundred times without as much as a crack
