--- a/index.html
+++ b/index.html
@@ -104,5 +104,6 @@
         <div class="author">- Dhairya Thakkar (not really lol)</div>
       </div>
     </div>
+    <div class="cta"></div>
   </body>
 </html>
