Apply bare HTML for call to action section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Deekay99s Miami Page</title>
+    <title>The Red Hot Report</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -104,6 +104,17 @@
         <div class="author">- Dhairya Thakkar (not really lol)</div>
       </div>
     </div>
-    <div class="cta"></div>
+    <div class="section_04">
+      <div class="04_content">
+        <div class="04_text">
+          <div class="04_header">Join the Red Hot Report!</div>
+          <div class="04_subtext">
+            Click the button to your right, and recieve the latest Heat news in
+            an instant!
+          </div>
+        </div>
+        <button class="sign_up 04">Sign Up</button>
+      </div>
+    </div>
   </body>
 </html>
