change class names for cta section - cannot start w a number

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
       </div>
     </div>
     <div class="section_04">
-      <div class="04_content">
-        <div class="04_text">
-          <div class="04_header">Join the Red Hot Report!</div>
-          <div class="04_subtext">
+      <div class="content_04">
+        <div class="text_04">
+          <div class="header_04">Join the Red Hot Report!</div>
+          <div class="subtext_04">
             Click the button to your right, and recieve the latest Heat news in
             an instant!
           </div>
