apply css styling to cta section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             an instant!
           </div>
         </div>
-        <button class="sign_up 04">Sign Up</button>
+        <button class="sign_up">Sign Up</button>
       </div>
     </div>
   </body>
