Apply HTML for footer

--- a/index.html
+++ b/index.html
@@ -116,5 +116,8 @@
         <button class="sign_up">Sign Up</button>
       </div>
     </div>
+    <div class="footer">
+      <div class="copyright">Copyright &copy; Dhairya Thakkar 2024</div>
+    </div>
   </body>
 </html>
